...
        Email
    </string>
    <string name="prompt_password">
        Password
    </string>
    <string name="action_sign_in_short">
        Sign in
    </string>
    <string name="action_register">
        Register with the above details
    </string>
    <string name="logo_description">
        The Coinz logo.
...

    <!-- Strings related to the bottom navigation bar -->
    <string name="home_nav_button">
        Home
    </string>
    <string name="account_nav_button">
        Account
    </string>
    <string name="messaging_nav_button">
        Messages
    </string>

    <!-- Strings related to the BankActivity -->
    <string name="bankText">
        Hello and welcome to the bank!
    </string>
...
        Email of recipient
    </string>
    <string name="attach_coins_text">
        Coins to attach:
    </string>
    <string name="send_button_text">
        SEND
    </string>
    <string name="cant_send_coins_text">
        In order to send coins to\nother players, you must\nfirst have banked 25 coins\nfrom your wallet today.
    </string>

    <!-- Strings related to AccountFragment -->
    <string name="log_out_button_text">
        Log out
    </string>

    <!-- Strings related to InboxFragment -->
    <string name="start_message_creation_button_text">
        SEND NEW MESSAGE
    </string>
    <string name="inbox_text">
        Inbox
    </string>

    <!-- Strings related to MapFragment -->
...
