...
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.236">

        <EditText
            android:id="@+id/targetEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Email of recipient"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true" />
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
        app:layout_constraintVertical_bias="0.0">

        <EditText
            android:id="@+id/message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Message (max 140 characters)"
            android:maxLength="140"
            android:imeActionId="6"
            android:imeActionLabel="@string/action_sign_in_short"
...
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectCoinsText"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/sendButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="SEND"
        android:enabled="false"
...
